feat(security): add CORS, SPA CSRF, session control and frontend URL config
- Add CORS configuration with dynamic frontend.url property
- Enable SPA CSRF configuration
- Configure session management:
  - IF_REQUIRED policy
  - session fixation protection (migrateSession)
  - single active session per user
  - expired session redirect
- Add HttpSessionEventPublisher bean
- Update form login URLs to use frontend.url
- Restrict login/error endpoints and require authentication for others
- Add equals/hashCode to EmployeeUserDetails based on email
- Extend Google OAuth scopes (openid, profile, email)
- Add frontend.url to application config (default + profile-based)
- Update docker-compose environment variables (FRONTEND_URL, DB vars ordering)

Improves SPA security integration and session handling.

--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -29,6 +29,12 @@ spring:
           google:
             client-id: ${GOOGLE_CLIENT_ID}
             client-secret: ${GOOGLE_CLIENT_SECRET}
+            scope:
+              - openid
+              - profile
+              - email
+        provider:
+          google:
 
 server:
   port: 8080
@@ -51,6 +57,9 @@ spring:
       include-exception: true
       include-stacktrace: always
 
+frontend:
+  url: localhost:5432
+
 ---
 spring:
   config:
@@ -68,3 +77,6 @@ spring:
     password: ${POSTGRES_PASSWORD}
     url: jdbc:postgresql://database:5432/${POSTGRES_DB}
     driver-class-name: org.postgresql.Driver
+
+frontend:
+  url: ${FRONTEND_URL}
