--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,13 +15,18 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - SPRING_PROFILES_ACTIVE=${SPRING_PROFILES_ACTIVE}
+      - FRONTEND_URL=${FRONTEND_URL}
+
       - REMEMBER_ME_KEY=${REMEMBER_ME_KEY}
+
       - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
       - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
+
+      - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_USERNAME=${POSTGRES_USERNAME}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
+
+      - SPRING_PROFILES_ACTIVE=${SPRING_PROFILES_ACTIVE}
     depends_on:
       - database
 
@@ -32,6 +37,3 @@ services:
       - "80:80"
     depends_on:
       - backend
-
-volumes:
-  postgres_data:
